# mutiple_agent_try

./: .env.example  .gitignore  CLAUDE.md  PERSONALITY_TRADING_AGENTS_PROMPT.md  README.md  README_CN.md  pyproject.toml  todo.md
.claude/: settings.local.json
config/: agents.yaml  llm.yaml  market_knowledge.json  trading.yaml
scripts/: _backtest_helpers.py  backtest.py  create_agents_config.py  dashboard.py  export_training_data.py  generate_synthetic_data.py  llm_backtest.py
src/: __init__.py  main.py
src/agent/: README.md  __init__.py  base_agent.py  memory.py  multi_sample.py  reflection.py  trading_agent.py
src/execution/: README.md  __init__.py  account.py  aggregator.py  consistency_monitor.py  cost_model.py  debate.py  paper_trader.py  risk_manager.py  signal.py  stats_helper.py  strategy.py
src/integration/: README.md  __init__.py  redis_bus.py  telegram_notifier.py
src/market/: README.md  __init__.py  adversarial.py  data_feed.py  indicators.py
src/personality/: README.md  __init__.py  ocean_model.py  prompt_generator.py  trait_to_constraint.py
src/utils/: README.md  __init__.py  anonymizer.py  config_loader.py  knowledge_graph.py  logger.py  tfidf.py  trade_logger.py
tests/: conftest.py
tests/test_agent/: test_memory.py  test_trading_agent.py
tests/test_execution/: test_aggregator.py  test_consistency_monitor.py  test_cost_model.py  test_debate.py  test_paper_trader.py  test_strategy.py
tests/test_market/: test_adversarial.py
tests/test_personality/: test_ocean_model.py  test_prompt_generator.py  test_trait_to_constraint.py
(+4 files in other folders)
