[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personality-trading-agents"
version = "0.1.0"
description = "基于 Big Five (OCEAN) 人格模型的多Agent加密货币纸上交易系统"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "litellm>=1.0",
    "aiohttp>=3.9",
    "redis[hiredis]>=5.0",
    "aiogram>=3.0,<4.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
